# bio-resilience-engine

./: .env.example  .gitignore  CHANGELOG.md  CI_PIPELINE_UPDATE.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REVIEW_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  verify_repository.sh
.github/workflows/: README.md  ci.yml
docker/: Dockerfile.api  Dockerfile.edge  init-db.sql  mosquitto.conf  prometheus.yml
docker/grafana/dashboards/: dashboard.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  TECHNICAL_SPEC.md
models/: .gitkeep
src/: __init__.py
src/cloud_fusion/: __init__.py  bayesian_fusion.py  config.py  database.py  main.py  mqtt_subscriber.py
src/cloud_fusion/routers/: __init__.py  analysis.py  fusion.py  health.py  subjects.py
src/edge_node/: __init__.py  activity_classifier.py  inference_pipeline.py  main.py  mqtt_publisher.py  preprocessing.py  video_capture.py
src/wearable_sdk/: BioResilienceSDK.swift  HealthKitManager.swift  NetworkClient.swift
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_bayesian_fusion.py  test_edge_inference.py
